# rpgleveler

./: .gitignore  AGENTS.md  LICENSE  README.md  docs_macros.py  mkdocs.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: character-leveling.md  character-schema.md  cli.md  development.md  getting-started.md  index.md
docs/api/: character.md  character_leveler.md  hit_points.md  index.md  level_up_result.md  progression.md
docs/api/core/: character.md  class_names.md  level_up_result.md  races.md  saving_throw_data.md  spell_slots.md  thief_skills.md  turn_undead.md
docs/api/engine/: advancement.md  leveler.md
docs/api/io/: character_io.md
specs/: engine.md
src/rpgleveler/: __init__.py  character_leveler.py  classes.py  cli.py
src/rpgleveler/cli/: cli.py  handlers.py
src/rpgleveler/core/: __init__.py  character.py  class_names.py  level_up_result.py  races.py  saving_throw_data.py  spell_slots.py  thief_skills.py  turn_undead.py
src/rpgleveler/data/: __init__.py  attack_bonus.py  hit_dice.py  saving_throws.py  spell_slots.py  thief_skills.py  turn_undead.py  xp_tables.py
src/rpgleveler/engine/: advancement.py  hit_points.py  leveler.py  progression.py
src/rpgleveler/io/: character_io.py
src/rpgleveler/shared/: __init__.py  character.py  class_names.py  level_up_result.py  literals.py  races.py
tests/: conftest.py  test_attack_bonus.py  test_character_leveler.py  test_thief_skills.py
tests/data/characters/: dwarf_fighter_lvl1.json
tests/integration/: test_character_io.py  test_leveler_integration.py
tests/unit/cli/: test_cli.py  test_handlers.py
tests/unit/core/: test_character.py  test_class_names.py  test_races.py
tests/unit/data/: test_attack_bonus.py  test_hit_dice.py  test_saving_throws.py  test_spell_slots.py  test_thief_skills.py  test_turn_undead.py  test_xp_tables.py
tests/unit/engine/: test_advancement.py  test_hit_points.py  test_leveler.py  test_progression.py
tests/unit/shared/: test_character.py  test_class_names.py  test_races.py
