[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpgleveler"
version = "0.0.1"
description = "Level up characters for Basic Fantasy RPG."
readme = "README.md"
requires-python = ">=3.14"
license = { file = "LICENSE" }
authors = [
    { name = "Jason Tennant" }
]

dependencies = [
    "diceroller @ https://github.com/retromatey/diceroller/releases/download/v0.1.4/diceroller-0.1.4-py3-none-any.whl#sha256=671de48b1f488c90e65f033487289cb03a0843c176ea62fe9eb78c1f284201ac"
]

[project.scripts]
rpgleveler = "rpgleveler.cli.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "build",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.25",
  "mkdocs-macros-plugin",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"rpgleveler" = ["py.typed"]

# ---------------------------------------------
# Ruff configuration
# ---------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # import sorting
  "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"src/rpgleveler/data/*.py" = ["E501"]

# ---------------------------------------------
# Mypy configuration
# ---------------------------------------------
[tool.mypy]
python_version = "3.14"
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
disallow_any_generics = true

# ---------------------------------------------
# Pytest configuration
# ---------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

# ---------------------------------------------
# Coverage configuration
# ---------------------------------------------
[tool.coverage.run]
branch = true
source = ["rpgleveler"]
omit = [
    "src/rpgleveler/cli.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true

